# nvmd

./: .gitignore  Cargo.toml  Makefile  PRODUCT.md  README.md
.github/workflows/: release.yml
docs/: features.md
lua/nvmd/: init.lua
plugin/: nvmd.lua
scripts/: install-binary.sh
src/: app.rs  config.rs  highlight.rs  input.rs  main.rs  sync.rs
src/document/: loader.rs  mod.rs  model.rs  parser.rs  render.rs
src/mermaid/: cache.rs  mod.rs  renderer.rs  widget.rs
src/render/: mod.rs  settings.rs  theme.rs
src/watcher/: mod.rs
